# pdf-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  Makefile  PYTHON_FRONTEND.md  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: chat.mdc  cursor-rules-guide.mdc  ingestion.mdc  product-overview.mdc  rag.mdc  search-eval.mdc  tech-stack.mdc
app/: cache.py  chat.py  config.py  database.py  directory_service.py  embeddings.py  ingest.py  main.py  models.py  pdf_processing.py  routes.py  schemas.py
app/cli/: chat.py  enricher.py  generate_test_questions.py  ingest.py  run_search_eval.py  utils.py
app/services/: __init__.py  embeddings.py  enricher.py  ingest.py  pdf_processing.py  search.py
app/utils/: cache.py
eval_results/2026-03-02_14-28-07/: configs.md  example_result_1.md  example_result_2.md  example_result_3.md  results.md
eval_results/2026-03-02_14-29-28/: configs.md  example_result_3.md  results.md
eval_results/2026-03-02_14-50-24/: configs.md
eval_results/2026-03-02_14-50-29/: configs.md  results.md
eval_results/2026-03-02_15-10-54/: configs.md  example_result_2.md  example_result_3.md  results.md
eval_results/2026-03-02_15-52-01/: configs.md  example_result_1.md  results.md
eval_results/2026-03-02_16-22-20/: configs.md  results.md
pdf_search_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: download_pdfs.py  migrate_search_eval_results.py  unlock_documents.py
static/: style.css
templates/: base.html  chat.html  directories.html  document_card_fragment.html  document_detail.html  document_search.html  documents.html  eval_run_detail.html  eval_runs.html  search.html  search_result_detail.html  search_results.html  test_questions.html
